@@ -1,4 +1,4 @@
 #Ibator build version info
-#Fri Mar 06 13:35:30 CST 2009
+#Tue Mar 10 11:54:23 CDT 2009
 version=1.2.2
-buildNum=715
+buildNum=716
