@@ -124,7 +124,7 @@ here</a>.</p>
 
 <h2>Child Elements</h2>
 <ul>
-  <li><a href="properties.html">&lt;properties&gt;</a> (0 or 1)</li>
+  <li><a href="property.html">&lt;property&gt;</a> (0 or 1)</li>
 </ul>
 
 </body>
