@@ -46,7 +46,7 @@
      <a href="reference/logging.html">Logging</a> page
       for more information.</li>
   <li>Added new example plugin to demonstrate adding case insensitive LIKE
-      support to generated Example classes. See the
+      support to generated Example classes.  See the
      <a href="configreference/ibatorPlugin.html">&lt;ibatorPlugin&gt;</a> page
       for more information.</li>
   <li>Added "delimitAllColumns" attribute to table configurations.  This suppports databases
@@ -56,6 +56,9 @@
   <li>Added a page explaining how to deal with case sensitivity in PostgreSQL.  See the
      <a href="usage/postgresql.html">PostgreSQL</a> page
       for more information.</li>
+  <li>IBATIS-586 - Added the ability to specify nested property elements on columnOverrides.
+      See the <a href="configreference/columnOverride.html">&lt;columnOverride&gt;</a> page
+      for more information. Thanks to Dan Turkenkopf for the idea and a nice initial patch.</li>
 </ul>
 
 <h2>Version 1.2.1</h2>
